WIP try out virtual threads/loom